--- a/_includes/design.html
+++ b/_includes/design.html
@@ -1,20 +1,14 @@
-<section>
-    <div class="container">
-        <div class="col-md-12 red-bg">
-
-            <!-- HEADING -->
-            <h2>{{ site.data.languages[page.language]['polling_app'] }}</h2>
-            <p>{{ site.data.languages[page.language]['watch_demo'] }}</p>
-            <div class="separator"></div>
-
-            <!-- Video -->
-            <div class="video-img">
-                <img alt="" src="/assets/images/flat_v3/laptop.png">
-                <div class="video">
-                    <iframe src="https://player.vimeo.com/video/63022489?color=ffffff"
-                            allowfullscreen></iframe>
-                </div>
-            </div>
+    <section class="watch-demo">
+        <div class="watch-demo__title">
+            {{ site.data.languages[page.language]['polling_app'] }}
         </div>
-    </div>
-</section>
+
+        <div class="watch-demo__descr">
+            {{ site.data.languages[page.language]['watch_demo'] }}
+        </div>
+
+        <div class="watch-demo__video">
+            <iframe src="https://player.vimeo.com/video/63022489?color=ffffff"
+                    allowfullscreen></iframe>
+        </div>
+    </section>
