--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -1,53 +1,44 @@
-<section>
-    <div class="container" id="sponsors">
-        <div class="col-md-12 white-bg">
-            <h4>
-                {{ site.data.languages[page.language]['sponsored_by'] }}
-            </h4>
+<div class="container container--short">
+    <section class="sponsors">
+        <div class="sponsors__title">
+            {{ site.data.languages[page.language]['sponsored_by'] }}
+        </div>
 
-
-            <a href="https://mctekk.com/phalcon" target="_blank">
-                <img width="240px"
-                     src="https://assets.phalcon.io/phalcon/images/backers/mctekk-149x34.svg"
-                     alt="Mctekk">
+        <div class="sponsors__list">
+            <a href="https://mctekk.com" class="sponsors__item">
+                <img src="https://assets.phalcon.io/phalcon/images/backers/mctekk-149x34.svg"
+                     alt="{mctekk}">
             </a>
-            <a href="https://abits.com/" target="_blank">
-                <img width="240px"
-                     src="https://assets.phalcon.io/phalcon/images/backers/abits-100x34.svg"
+            <a href="https://abits.com"
+               class="sponsors__item">
+                <img src="https://assets.phalcon.io/phalcon/images/backers/abits-100x34.svg"
                      alt="Abits">
             </a>
-            <a href="https://algolia.com/" target="_blank">
-                <img width="240px"
-                     src="https://assets.phalcon.io/phalcon/images/backers/algolia-725x360.svg"
-                     alt="Algolia">
-            </a>
-            <a href="https://netlify.com/" target="_blank">
-                <img width="240px"
-                     src="https://assets.phalcon.io/phalcon/images/backers/netlify-147x40.svg"
-                     alt="Netlify">
-            </a>
-            <a href="https://odva.pro/" target="_blank">
-                <svg width="36" height="30" viewBox="0 0 38 31" fill="none"
-                     xmlns="http://www.w3.org/2000/svg">
-                    <path d="M15.375 29.3529C22.9283 29.3529 29.0514 23.2298 29.0514 15.6765C29.0514 8.12317 22.9283 2 15.375 2C7.82165 2 1.69849 8.12317 1.69849 15.6765C1.69849 23.2298 7.82165 29.3529 15.375 29.3529Z"
-                          stroke="#273646" stroke-opacity="0.7"
-                          stroke-width="3"></path>
-                    <path d="M33.9044 23.6177H32.1397V30.6765H33.9044V23.6177Z"
-                          fill="#273646" fill-opacity="0.7"></path>
-                    <path d="M37.4338 23.6177H35.6691V30.6765H37.4338V23.6177Z"
-                          fill="#273646" fill-opacity="0.7"></path>
-                </svg>
-            </a>
-            <a href="https://crowdin.com/" target="_blank">
-                <img width="240px"
-                     src="https://assets.phalcon.io/phalcon/images/backers/crowdin.png"
+            <a href="https://crowdin.com/"
+               class="sponsors__item">
+                <img src="https://assets.phalcon.io/phalcon/images/backers/crowdin.png"
                      alt="Crowdin">
             </a>
-            <a href="https://www.uptrends.com" target="_blank" title="Uptrends Web Application Monitoring">
-                <img width="240px"
-                     src="https://assets.phalcon.io/phalcon/images/backers/uptrends-200x60.svg"
+            <a href="https://algolia.com"
+               class="sponsors__item">
+                <img src="https://assets.phalcon.io/phalcon/images/backers/algolia-725x360.svg"
+                     alt="Algolia">
+            </a>
+            <a href="https://odva.pro/"
+               class="sponsors__item">
+                <img src="https://assets.phalcon.io/phalcon/images/backers/o2.svg"
+                     alt="Algolia">
+            </a>
+            <a href="https://netlify.com"
+               class="sponsors__item">
+                <img src="https://assets.phalcon.io/phalcon/images/backers/netlify-147x40.svg"
+                     alt="Netlify">
+            </a>
+            <a href="https://www.uptrends.com"
+               class="sponsors__item">
+                <img src="https://assets.phalcon.io/phalcon/images/backers/uptrends-200x60.svg"
                      alt="Uptrends Web Application Monitoring">
             </a>
         </div>
-    </div>
-</section>
+    </section>
+</div>
