--- a/_includes/head.html
+++ b/_includes/head.html
@@ -113,7 +113,7 @@
     </script>
     <!-- End Google Analytics -->
 
-    <link rel="stylesheet" type="text/css" href="https://assets.phalcon.io/phalcon/css/core.css?23">
+    <link rel="stylesheet" type="text/css" href="https://assets.phalcon.io/phalcon/css/core.css">
     <script type="text/javascript" src="https://assets.phalcon.io/phalcon/js/core.js"></script>
     <!--[if lt IE 9]>
     <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/r29/html5.min.js"></script>
