Moved files to old folder to keep only what we need

--- a/old/_includes/header-page.html
+++ b/old/_includes/header-page.html
@@ -28,7 +28,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="https://phalcon.link/docs"
+                        <a href="https://phalcon.io/docs"
                            class="header-nav-link" target="_blank">
                             {{ site.data.languages[page.language]['docs'] }}
                         </a>
@@ -47,43 +47,43 @@
                                 {{ site.data.languages[page.language]['social'] }}
                             </li>
                             <li>
-                                <a href="https://phalcon.link/blog"
+                                <a href="https://phalcon.io/blog"
                                    target="_blank">
                                     {{ site.data.languages[page.language]['blog'] }}
                                 </a>
                             </li>
                             <li>
-                                <a href="https://phalcon.link/telegram"
+                                <a href="https://phalcon.io/telegram"
                                    target="_blank">
                                     Telegram
                                 </a>
                             </li>
                             <li>
-                                <a href="https://phalcon.link/gab"
+                                <a href="https://phalcon.io/gab"
                                    target="_blank">
                                     Gab
                                 </a>
                             </li>
                             <li>
-                                <a href="https://phalcon.link/parler"
+                                <a href="https://phalcon.io/parler"
                                    target="_blank">
                                     Parler
                                 </a>
                             </li>
                             <li>
-                                <a href="https://phalcon.link/mewe"
+                                <a href="https://phalcon.io/mewe"
                                    target="_blank">
                                     MeWe
                                 </a>
                             </li>
                             <li>
-                                <a href="https://phalcon.link/fb"
+                                <a href="https://phalcon.io/fb"
                                    target="_blank">
                                     Facebook
                                 </a>
                             </li>
                             <li>
-                                <a href="https://phalcon.link/t"
+                                <a href="https://phalcon.io/t"
                                    target="_blank">
                                     Twitter
                                 </a>
@@ -93,25 +93,25 @@
                                 {{ site.data.languages[page.language]['help'] }}
                             </li>
                             <li>
-                                <a href="https://phalcon.link/forum"
+                                <a href="https://phalcon.io/forum"
                                    target="_blank">
                                     {{ site.data.languages[page.language]['forum'] }}
                                 </a>
                             </li>
                             <li>
-                                <a href="https://phalcon.link/api"
+                                <a href="https://phalcon.io/api"
                                    target="_blank">
                                     {{ site.data.languages[page.language]['api'] }}
                                 </a>
                             </li>
                             <li>
-                                <a href="https://phalcon.link/discord"
+                                <a href="https://phalcon.io/discord"
                                    target="_blank">
                                     Discord
                                 </a>
                             </li>
                             <li>
-                                <a href="https://phalcon.link/so"
+                                <a href="https://phalcon.io/so"
                                    target="_blank">
                                     Stack Overflow
                                 </a>
@@ -129,7 +129,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="https://phalcon.link/fund"
+                        <a href="https://phalcon.io/fund"
                            class="header-nav-link">
                             {{ site.data.languages[page.language]['support_us'] }}
                         </a>
