--- a/old/_layouts/about.html
+++ b/old/_layouts/about.html
@@ -55,7 +55,7 @@ layout: default
             {{ site.data.languages[page.language]['about_screencasts'] }}
         </div>
         <div>
-            {{ site.data.languages[page.language]['about_screencasts_1'] | replace: ':1:', 'https://phalcon.link/youtube' }}
+            {{ site.data.languages[page.language]['about_screencasts_1'] | replace: ':1:', 'https://phalcon.io/youtube' }}
         </div>
         <hr class="base-info-descr__devider">
         <div class="sponsors__title">
@@ -76,7 +76,7 @@ layout: default
             {{ site.data.languages[page.language]['about_blog'] }}
         </div>
         <div>
-            {{ site.data.languages[page.language]['about_blog_1'] | replace: ':1:', 'https://phalcon.link/blog' }}
+            {{ site.data.languages[page.language]['about_blog_1'] | replace: ':1:', 'https://phalcon.io/blog' }}
         </div>
         <hr class="base-info-descr__devider">
         <div class="sponsors__title">
@@ -97,15 +97,15 @@ layout: default
         </div>
         <div>
             <ul class="dash-list">
-                <li><a href="https://phalcon.link/telegram" target="_blank">Telegram</a></li>
-                <li><a href="https://phalcon.link/gab" target="_blank">Gab</a></li>
-                <li><a href="https://phalcon.link/parler" target="_blank">Parler</a></li>
-                <li><a href="https://phalcon.link/mewe" target="_blank">MeWe</a></li>
-                <li><a href="https://phalcon.link/fb" target="_blank">Facebook</a></li>
-                <li><a href="https://phalcon.link/t" target="_blank">Twitter</a></li>
-                <li><a href="https://phalcon.link/blog" target="_blank">Blog</a></li>
-                <li><a href="https://phalcon.link/forum" target="_blank">Forum</a></li>
-                <li><a href="https://phalcon.link/github" target="_blank">{{ site.data.languages[page.language]['about_star_on_github'] }}</a></li>
+                <li><a href="https://phalcon.io/telegram" target="_blank">Telegram</a></li>
+                <li><a href="https://phalcon.io/gab" target="_blank">Gab</a></li>
+                <li><a href="https://phalcon.io/parler" target="_blank">Parler</a></li>
+                <li><a href="https://phalcon.io/mewe" target="_blank">MeWe</a></li>
+                <li><a href="https://phalcon.io/fb" target="_blank">Facebook</a></li>
+                <li><a href="https://phalcon.io/t" target="_blank">Twitter</a></li>
+                <li><a href="https://phalcon.io/blog" target="_blank">Blog</a></li>
+                <li><a href="https://phalcon.io/forum" target="_blank">Forum</a></li>
+                <li><a href="https://phalcon.io/github" target="_blank">{{ site.data.languages[page.language]['about_star_on_github'] }}</a></li>
             </ul>
         </div>
         <hr class="base-info-descr__devider">
