--- a/old/_layouts/sponsors.html
+++ b/old/_layouts/sponsors.html
@@ -11,7 +11,7 @@ layout: page
                 </p>
             </div>
             <div class="col-lg-2">
-                <a href="https://phalcon.link/fund">
+                <a href="https://phalcon.io/fund">
                     <button class="btn button-small btn-danger">
                         {{ site.data.languages[page.language]['support_us'] }}
                     </button>
