--- a/old/_layouts/support.html
+++ b/old/_layouts/support.html
@@ -12,7 +12,7 @@ layout: page
             </div>
             <div class="col-lg-12">
                 <p>
-                    {{ site.data.languages[page.language]['support_documentation_1'] | replace: ':1:', 'https://phalcon.link/docs' }}
+                    {{ site.data.languages[page.language]['support_documentation_1'] | replace: ':1:', 'https://phalcon.io/docs' }}
                 </p>
             </div>
         </div>
@@ -24,25 +24,25 @@ layout: page
                 </p>
                 <ul>
                     <li>
-                        {{ site.data.languages[page.language]['support_phalcon_forum'] | replace: ':1:', 'https://phalcon.link/forum' }}
+                        {{ site.data.languages[page.language]['support_phalcon_forum'] | replace: ':1:', 'https://phalcon.io/forum' }}
                     </li>
                     <li>
-                        {{ site.data.languages[page.language]['support_phalcon_forum'] | replace: ':1:', 'https://phalcon.link/forum' }}
+                        {{ site.data.languages[page.language]['support_phalcon_forum'] | replace: ':1:', 'https://phalcon.io/forum' }}
                     </li>
                     <li>
                         {{ site.data.languages[page.language]['support_stack_overflow'] | replace: ':1:', 'https://stackoverflow.com' | replace: ':2:', 'https://stackoverflow.com/questions/tagged/phalcon' }}
                     </li>
                     <li>
-                        {{ site.data.languages[page.language]['support_discord'] | replace: ':1:', 'https://phalcon.link/discord' }}
+                        {{ site.data.languages[page.language]['support_discord'] | replace: ':1:', 'https://phalcon.io/discord' }}
                     </li>
                     <li>
                         {{ site.data.languages[page.language]['support_social_network_accounts'] }}
-                        <a href="https://phalcon.link/telegram" target="_blank">Telegram</a>,
-                        <a href="https://phalcon.link/gab" target="_blank">Gab</a>,
-                        <a href="https://phalcon.link/parler" target="_blank">Parler</a>,
-                        <a href="https://phalcon.link/mewe" target="_blank">MeWe</a>,
-                        <a href="https://phalcon.link/fb" target="_blank">Facebook</a>,
-                        <a href="https://phalcon.link/t" target="_blank">Twitter</a>
+                        <a href="https://phalcon.io/telegram" target="_blank">Telegram</a>,
+                        <a href="https://phalcon.io/gab" target="_blank">Gab</a>,
+                        <a href="https://phalcon.io/parler" target="_blank">Parler</a>,
+                        <a href="https://phalcon.io/mewe" target="_blank">MeWe</a>,
+                        <a href="https://phalcon.io/fb" target="_blank">Facebook</a>,
+                        <a href="https://phalcon.io/t" target="_blank">Twitter</a>
                     </li>
                     <li>If you still believe that what you found is a bug, please <a href='https://github.com/phalcon/cphalcon/issues/new'>open an issue</a></li>
                 </ul>
