--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,18 +1,18 @@
 <footer class="footer">
     <div class="container">
         <ul class="footer-nav">
-            <li><a href="https://phalcon.link/forum">{{- site.data.languages[page.language]['forum'] -}}</a></li>
-            <li><a href="https://phalcon.link/blog">{{- site.data.languages[page.language]['blog'] -}}</a></li>
-            <li><a href="https://phalcon.link/discord">Discord</a></li>
-            <li><a href="https://phalcon.link/telegram">Telegram</a></li>
-            <li><a href="https://phalcon.link/gab">Gab</a></li>
-            <li><a href="https://phalcon.link/parler">Parler</a></li>
-            <li><a href="https://phalcon.link/mewe">MeWe</a></li>
-            <li><a href="https://phalcon.link/f">Facebook</a></li>
-            <li><a href="https://phalcon.link/t">Twitter</a></li>
-            <li><a href="https://phalcon.link/bitchute">Bitchute</a></li>
-            <li><a href="https://phalcon.link/lbry">LBRY</a></li>
-            <li><a href="https://phalcon.link/youtube">YouTube</a></li>
+            <li><a href="https://phalcon.io/forum">{{- site.data.languages[page.language]['forum'] -}}</a></li>
+            <li><a href="https://phalcon.io/blog">{{- site.data.languages[page.language]['blog'] -}}</a></li>
+            <li><a href="https://phalcon.io/discord">Discord</a></li>
+            <li><a href="https://phalcon.io/telegram">Telegram</a></li>
+            <li><a href="https://phalcon.io/gab">Gab</a></li>
+            <li><a href="https://phalcon.io/parler">Parler</a></li>
+            <li><a href="https://phalcon.io/mewe">MeWe</a></li>
+            <li><a href="https://phalcon.io/f">Facebook</a></li>
+            <li><a href="https://phalcon.io/t">Twitter</a></li>
+            <li><a href="https://phalcon.io/bitchute">Bitchute</a></li>
+            <li><a href="https://phalcon.io/lbry">LBRY</a></li>
+            <li><a href="https://phalcon.io/youtube">YouTube</a></li>
         </ul>
 
         <div class="footer__license">
@@ -48,10 +48,10 @@
 <!--                        <a href="/{{ page.language }}/support">-->
 <!--                            {{ site.data.languages[page.language]['support'] }}-->
 <!--                    {{ site.data.languages[page.language]['community'] }}-->
-<!--                        <a href="https://phalcon.link/forum"-->
+<!--                        <a href="https://phalcon.io/forum"-->
 <!--                           class="header-nav-link" target="_blank">-->
 <!--                            {{ site.data.languages[page.language]['forum'] }}-->
-<!--                        <a href="https://phalcon.link/github">-->
+<!--                        <a href="https://phalcon.io/github">-->
 <!--                            GitHub-->
 <!--                        <a href="https://github.com/phalcon/cphalcon/issues">-->
 <!--                            {{ site.data.languages[page.language]['issue_tracker'] }}-->
@@ -59,19 +59,19 @@
 <!--                            Stack Overflow-->
 <!--                        <a href="/{{ page.language }}/testimonials">-->
 <!--                            {{ site.data.languages[page.language]['testimonials'] }}-->
-<!--                        <a href="https://phalcon.link/builtwith">-->
+<!--                        <a href="https://phalcon.io/builtwith">-->
 <!--                            {{ site.data.languages[page.language]['built_with_phalcon'] }}-->
-<!--                        <a href="https://phalcon.link/store">-->
+<!--                        <a href="https://phalcon.io/store">-->
 <!--                            {{ site.data.languages[page.language]['store'] }}-->
 <!--                    {{ site.data.languages[page.language]['about'] }}-->
-<!--                        <a class="link-black" href="https://phalcon.link/blog">-->
+<!--                        <a class="link-black" href="https://phalcon.io/blog">-->
 <!--                            {{ site.data.languages[page.language]['blog'] }}-->
 <!--                        <a class="link-black" href="/{{ page.language }}/about">-->
 <!--                            {{ site.data.languages[page.language]['about'] }}-->
 <!--                        <a class="link-black" href="/{{ page.language }}/team">-->
 <!--                            {{ site.data.languages[page.language]['team'] }}-->
 <!--                        <a class="link-black"-->
-<!--                           href="https://phalcon.link/donate">-->
+<!--                           href="https://phalcon.io/donate">-->
 <!--                            {{ site.data.languages[page.language]['donate'] }}-->
 <!--                        <a class="link-black"-->
 <!--                           href="/{{ page.language }}/consulting">-->
