--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,10 +16,10 @@
 
                 <ul class="header-nav">
                     <li>
-                        <a href="https://phalcon.link/docs">{{ site.data.languages[page.language]['download'] }}</a>
+                        <a href="https://phalcon.io/docs">{{ site.data.languages[page.language]['download'] }}</a>
                     </li>
                     <li>
-                        <a href="https://phalcon.link/docs">{{ site.data.languages[page.language]['docs'] }}</a>
+                        <a href="https://phalcon.io/docs">{{ site.data.languages[page.language]['docs'] }}</a>
                     </li>
                     <li class="expand">
                         <a href="#">{{ site.data.languages[page.language]['site'] }}</a>
@@ -56,25 +56,25 @@
                                 <li class="header-dropdown__title">{{ site.data.languages[page.language]['social'] }}</li>
                                 <li>
                                     <ul>
-                                        <li><a href="https://phalcon.link/blog">{{ site.data.languages[page.language]['blog'] }}</a></li>
-                                        <li><a href="https://phalcon.link/telegram">Telegram</a></li>
-                                        <li><a href="https://phalcon.link/gab">Gab</a></li>
-                                        <li><a href="https://phalcon.link/mewe">MeWe</a></li>
-                                        <li><a href="https://phalcon.link/parler">Parler</a></li>
-                                        <li><a href="https://phalcon.link/fb">Facebook</a></li>
-                                        <li><a href="https://phalcon.link/t">Twitter</a></li>
-                                        <li><a href="https://phalcon.link/bitchute">Bitchute</a></li>
-                                        <li><a href="https://phalcon.link/lbry">Twitter</a></li>
-                                        <li><a href="https://phalcon.link/youtube">YouTube</a></li>
+                                        <li><a href="https://phalcon.io/blog">{{ site.data.languages[page.language]['blog'] }}</a></li>
+                                        <li><a href="https://phalcon.io/telegram">Telegram</a></li>
+                                        <li><a href="https://phalcon.io/gab">Gab</a></li>
+                                        <li><a href="https://phalcon.io/mewe">MeWe</a></li>
+                                        <li><a href="https://phalcon.io/parler">Parler</a></li>
+                                        <li><a href="https://phalcon.io/fb">Facebook</a></li>
+                                        <li><a href="https://phalcon.io/t">Twitter</a></li>
+                                        <li><a href="https://phalcon.io/bitchute">Bitchute</a></li>
+                                        <li><a href="https://phalcon.io/lbry">Twitter</a></li>
+                                        <li><a href="https://phalcon.io/youtube">YouTube</a></li>
                                     </ul>
                                 </li>
                                 <li class="header-dropdown__title">{{ site.data.languages[page.language]['help'] }}</li>
                                 <li>
                                     <ul>
-                                        <li><a href="https://phalcon.link/docs">{{ site.data.languages[page.language]['documentation'] }}</a></li>
-                                        <li><a href="https://phalcon.link/forum">{{ site.data.languages[page.language]['forum'] }}</a></li>
-                                        <li><a href="https://phalcon.link/discord">Discord</a></li>
-                                        <li><a href="https://phalcon.link/so">Stack Overflow</a></li>
+                                        <li><a href="https://phalcon.io/docs">{{ site.data.languages[page.language]['documentation'] }}</a></li>
+                                        <li><a href="https://phalcon.io/forum">{{ site.data.languages[page.language]['forum'] }}</a></li>
+                                        <li><a href="https://phalcon.io/discord">Discord</a></li>
+                                        <li><a href="https://phalcon.io/so">Stack Overflow</a></li>
                                     </ul>
                                 </li>
                             </ul>
@@ -82,7 +82,7 @@
                     </li>
 
                     <li>
-                        <a href="https://phalcon.link/fund">{{ site.data.languages[page.language]['support_us'] }}</a>
+                        <a href="https://phalcon.io/fund">{{ site.data.languages[page.language]['support_us'] }}</a>
                     </li>
 
                 </ul>
@@ -91,10 +91,10 @@
                     <input type="text" class="header__search" placeholder="Search...">
                     <ul>
                         <li>
-                            <a href="https://phalcon.link/docs">{{ site.data.languages[page.language]['download'] }}</a>
+                            <a href="https://phalcon.io/docs">{{ site.data.languages[page.language]['download'] }}</a>
                         </li>
                         <li>
-                            <a href="https://phalcon.link/docs">{{ site.data.languages[page.language]['docs'] }}</a>
+                            <a href="https://phalcon.io/docs">{{ site.data.languages[page.language]['docs'] }}</a>
                         </li>
 
                         <li class="extendable extended">
@@ -129,32 +129,32 @@
                                 <li class="header-dropdown--mobile__title">{{ site.data.languages[page.language]['social'] }}</li>
                                 <li>
                                     <ul>
-                                        <li><a href="https://phalcon.link/blog">{{ site.data.languages[page.language]['blog'] }}</a></li>
-                                        <li><a href="https://phalcon.link/telegram">Telegram</a></li>
-                                        <li><a href="https://phalcon.link/gab">Gab</a></li>
-                                        <li><a href="https://phalcon.link/mewe">MeWe</a></li>
-                                        <li><a href="https://phalcon.link/parler">Parler</a></li>
-                                        <li><a href="https://phalcon.link/fb">Facebook</a></li>
-                                        <li><a href="https://phalcon.link/t">Twitter</a></li>
-                                        <li><a href="https://phalcon.link/bitchute">Bitchute</a></li>
-                                        <li><a href="https://phalcon.link/lbry">Twitter</a></li>
-                                        <li><a href="https://phalcon.link/youtube">YouTube</a></li>
+                                        <li><a href="https://phalcon.io/blog">{{ site.data.languages[page.language]['blog'] }}</a></li>
+                                        <li><a href="https://phalcon.io/telegram">Telegram</a></li>
+                                        <li><a href="https://phalcon.io/gab">Gab</a></li>
+                                        <li><a href="https://phalcon.io/mewe">MeWe</a></li>
+                                        <li><a href="https://phalcon.io/parler">Parler</a></li>
+                                        <li><a href="https://phalcon.io/fb">Facebook</a></li>
+                                        <li><a href="https://phalcon.io/t">Twitter</a></li>
+                                        <li><a href="https://phalcon.io/bitchute">Bitchute</a></li>
+                                        <li><a href="https://phalcon.io/lbry">Twitter</a></li>
+                                        <li><a href="https://phalcon.io/youtube">YouTube</a></li>
                                     </ul>
                                 </li>
                                 <li class="header-dropdown--mobile__title">{{ site.data.languages[page.language]['help'] }}</li>
                                 <li>
                                     <ul>
-                                        <li><a href="https://phalcon.link/docs">{{ site.data.languages[page.language]['documentation'] }}</a></li>
-                                        <li><a href="https://phalcon.link/forum">{{ site.data.languages[page.language]['forum'] }}</a></li>
-                                        <li><a href="https://phalcon.link/discord">Discord</a></li>
-                                        <li><a href="https://phalcon.link/so">Stack Overflow</a></li>
+                                        <li><a href="https://phalcon.io/docs">{{ site.data.languages[page.language]['documentation'] }}</a></li>
+                                        <li><a href="https://phalcon.io/forum">{{ site.data.languages[page.language]['forum'] }}</a></li>
+                                        <li><a href="https://phalcon.io/discord">Discord</a></li>
+                                        <li><a href="https://phalcon.io/so">Stack Overflow</a></li>
                                     </ul>
                                 </li>
                             </ul>
                         </li>
 
                         <li>
-                            <a href="https://phalcon.link/fund">{{ site.data.languages[page.language]['support_us'] }}</a>
+                            <a href="https://phalcon.io/fund">{{ site.data.languages[page.language]['support_us'] }}</a>
                         </li>
 
                         <li class="extendable extended">
