--- a/_includes/jumbo.html
+++ b/_includes/jumbo.html
@@ -21,7 +21,7 @@
                 <a href="/download/linus" class="green-button">
                     {{ site.data.languages[page.language]['get_phalcon'] }}
                 </a>
-                <a href="https://phalcon.link/fund" class="green-button">
+                <a href="https://phalcon.io/fund" class="green-button">
                     {{ site.data.languages[page.language]['support_us'] }}
                 </a>
             </div>
